# PyPEF

./: .gitattributes  .gitignore  Dockerfile  LICENSE.md  MANIFEST.in  README.md  build_with_pyinstaller.bat  build_with_pyinstaller.sh  gui_setup.bat  gui_setup.sh  linux_env.yml  pypef_environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_parallelization.txt  run.py  setup.py  win_env.yml
.github/workflows/: build.yml  ci.yml
NK_landscape/: NK_README.md  NK_landscape.html
datasets/ANEH/: 37_ANEH_variants.csv
datasets/AVGFP/: avGFP.csv  uref100_avgfp_jhmmer_119.a2m  uref100_avgfp_jhmmer_119.sto
easy_setup/: README.md
easy_setup/linux/: conda_install_test.sh  easy_install_test.sh
easy_setup/windows/: INSTALLER_TEST_WIN.bat  README.md  download_install_miniconda.ps1  download_pypef_test_files.ps1  download_unzip_pypef_files.ps1
encoding_validation_api/: API_README.md  api_usage_example.py  exemplary_dataset_B.py  pypef_api.py  run_script_example.py
gui/: PyPEFGUIQtWindow.py  qt_window.py
pypef/: Modules_Directed_Evolution.py  Modules_Parallelization.py  Modules_Prediction.py  Modules_Regression.py  __init__.py  encoding_api.py  main.py  run_pypef.py  settings.py
pypef/api/: cv_regression_options.py  encoding.py  validation.py
pypef/cli/: directed_evolution.py  parallelization.py  regression.py  run.py
pypef/dca/: dca_run.py  encoding.py  gremlin_inference.py  hybrid_model.py  plmc_encoding.py  run.py
pypef/gui/: qt_window.py
pypef/hybrid/: hybrid_model.py  hybrid_run.py
pypef/llm/: __init__.py  esm_lora_tune.py  inference.py  prosst_lora_tune.py  utils.py
pypef/ml/: run.py  (+3 more)
src/: Modules_Directed_Evolution.py  Modules_Learning_Validation.py  Modules_Parallelization.py  Modules_Prediction.py  Modules_Regression.py  pypef.py
tests/: test_api_functions.py
workflow/: Workflow_PyPEF.html  Workflow_PyPEF.ipynb  api_encoding_train_test.ipynb  api_encoding_train_test.py  easy_install_test.sh  run_cli_tests.sh  run_cli_tests_linux.sh  run_cli_tests_win.ps1
(+794 files in other folders)
